--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@ nav{
     overflow: auto;
     width: 100%;
     height: 80px;
-    background-color: rgb(0, 81, 255);
+    background-image: linear-gradient(to left top, #0087ff, #00a3ff, #00bcff, #00d3ff, #1ae7ff);    color: rgb(255, 255, 255);
     border-radius: 10px;
 }
 .logo{
@@ -29,6 +29,9 @@ ul{
     float: right;
     margin-right: 40px;
     line-height: 80px;
+}
+ul li{
+    display: inline-block;
 }
 ul li a{
     font-size: 25px;
@@ -67,15 +70,56 @@ label{
         display: none;
     }
 }
-#input{
+#input1{
     background-color: rgb(146, 146, 146);
     box-shadow:  1px 1px 1px 1px rgba(0,0,0,.075);
     border:1px solid #f1f2f7;
     background-color: #f1f2f7;
-
-
-
 }
+#input1{
+    background-color: rgb(146, 146, 146);
+    box-shadow:  1px 1px 1px 1px rgba(0,0,0,.075);
+    border:1px solid #f1f2f7;
+    background-color: #f1f2f7;
+}
+#input1{
+    background-color: rgb(146, 146, 146);
+    box-shadow:  1px 1px 1px 1px rgba(0,0,0,.075);
+    border:1px solid #f1f2f7;
+    background-color: #f1f2f7;
+}
+#input1{
+    background-color: rgb(146, 146, 146);
+    box-shadow:  1px 1px 1px 1px rgba(0,0,0,.075);
+    border:1px solid #f1f2f7;
+    background-color: #f1f2f7;
+}
+#input1{
+    background-color: rgb(146, 146, 146);
+    box-shadow:  1px 1px 1px 1px rgba(0,0,0,.075);
+    border:1px solid #f1f2f7;
+    background-color: #f1f2f7;
+}
+#input1{
+    background-color: rgb(146, 146, 146);
+    box-shadow:  1px 1px 1px 1px rgba(0,0,0,.075);
+    border:1px solid #f1f2f7;
+    background-color: #f1f2f7;
+}
+
+#input1{
+    background-color: rgb(146, 146, 146);
+    box-shadow:  1px 1px 1px 1px rgba(0,0,0,.075);
+    border:1px solid #f1f2f7;
+    background-color: #f1f2f7;
+}
+#input1 , #input2,#input3,#input4,#input5,#input6,#input7,#input8,#input9,#input10,#input11{
+    background-color: rgb(146, 146, 146);
+    box-shadow:  1px 1px 1px 1px rgba(0,0,0,.075);
+    border:1px solid #f1f2f7;
+    background-color: #f1f2f7;
+}
+
 table{
     width: 100%;
 }
@@ -92,4 +136,37 @@ table{
 }
 .succes{
     color: rgb(255, 0, 0);
+}
+
+.left{
+    float: left;
+    width: 20%;
+    background-color: #1AE7FF;
+    text-align: center;
+    height: 100vh;
+    border-radius: 10px;
+}
+.main{
+    float: right;
+    width:80%;
+}
+.btn1{
+    width: 100%;
+    background-color: #1AE7FF;
+    border: none;
+    color:black;
+    font-size: 25px;
+    border-radius: 10px;
+    padding: 10px;
+
+}
+.btn1:hover{
+    background-color: wheat;
+
+}
+.title{
+    text-align: center;
+}
+.chikaya1{
+    width: 100px;
 }
