--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,6 +44,7 @@ ul li a:hover{
     font-size: 32px;
     box-shadow: 1px 4px 15px 4px rgb(5, 227, 243);
     border: 1px double rgb(252, 252, 252);
+    color: white;
 
 }
 .chikaya{
