--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,7 +52,10 @@ ul li a:hover{
 }
 .card{
     text-align: center;
+}
+.cardbox{
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
 }
 input{
     text-align: center;
